deploy/dotnet.deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-fibonacci
  template:
    metadata:
      labels:
        app: dotnet-fibonacci
        tag: fibonacci
    spec:
      containers:
        - name: dotnet-fibonacci
          image: cloudreadyclub/dotnet-fibonacci:2.2
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "256Mi"
              cpu: "400m"
            requests:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
            timeoutSeconds: 120
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
            timeoutSeconds: 120
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
