deploy/dotnet.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-fibonacci
spec:
  selector:
    app: dotnet-fibonacci
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
